--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "primeicons": "^6.0.1",
         "primevue": "3.49.1",
         "vue": "^3.2.41",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.1.5",
+        "vue3-audio-player": "^1.0.7"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
